fixed whitespace on mobile

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,8 +1,6 @@
 .container {
   width: 100%;
   margin: 0 auto;
-  box-sizing: border-box;
-  padding: 0 1rem;
 }
 
 .default {
@@ -10,9 +8,10 @@
 }
 
 .small {
-  max-width: 64rem;
+  max-width: 70rem;
 }
 
-.fullWidth {
-  max-width: none;
+/* Add custom padding for small screens and tablets */
+.smallPadding {
+  padding: 0rem 1rem 0rem 1rem;
 }
